modify all() in contorller